--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3'
 
+networks:
+  otus:
+    external:
+      name: otus
+
 services:
   otus-db:
     image: 'postgres:15-alpine'
@@ -11,3 +16,5 @@ services:
       POSTGRES_PASSWORD: 'otus'
     volumes:
       - /var/lib/docker-data/otus-postgres:/var/lib/postgresql/data
+    networks:
+      - otus
